fixed letter spacing

--- a/css/main.sass
+++ b/css/main.sass
@@ -65,14 +65,12 @@ h1
   border-bottom: 2px solid $h1-lower-border-color
   font-size: 2.5em
   font-weight: bold
-  letter-spacing: 0.08em
   text-shadow: 2px 2px 4px $text-shadow-color
   padding: 20px
 
 h2
   font-size: 2em
   font-weight: bold
-  letter-spacing: 0.08em
   text-shadow: 2px 2px 4px $text-shadow-color
   margin-top: 40px
   margin-bottom: 20px
@@ -105,9 +103,9 @@ ol > li
 .title-line
   margin-bottom: 10px
 
-.title-line a
-  font-weight: bold
-  font-size: 1.2em
+  a
+    font-weight: bold
+    font-size: 1.2em
 
 .deco
   font-family: "Tangerine", arial, sans-serif
